--- a/src/components/section/section-3/Section3Styles.scss
+++ b/src/components/section/section-3/Section3Styles.scss
@@ -1,5 +1,12 @@
-.success-img {
-  margin: 50px 0;
+.success-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  .success-img {
+    margin: 50px 0;
+  }
+}
+
 
 @media (max-width: 430px) {
   .section-3 {
@@ -11,6 +18,6 @@
     }
   }
 }
-}
+
 
 
