--- a/src/components/section/section-3/registration-form/RegistrationFormStyles.css
+++ b/src/components/section/section-3/registration-form/RegistrationFormStyles.css
@@ -54,7 +54,14 @@
   .form .submit {
     display: flex;
     justify-content: center;
-    margin: 50px 0 100px 0; }
+    margin: 50px 0 20px 0; }
+  .form .error {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 100px; }
+    .form .error span {
+      color: red;
+      font-size: 16px; }
 
 @media (max-width: 430px) {
   .form .form-inputs {
