--- a/src/components/section/section-3/registration-form/RegistrationFormStyles.scss
+++ b/src/components/section/section-3/registration-form/RegistrationFormStyles.scss
@@ -2,10 +2,12 @@
 
 .form {
   font-family: $font--family;
+
   .form-inputs {
     display: grid;
     width: 380px;
     margin: 0 auto;
+
     span {
       margin: 4px 0 0 14px;
 
@@ -14,25 +16,30 @@
       color: #7e7e7e;
     }
   }
+
   .form-radio {
     margin: 25px 0 0 36.35px;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 26px;
+
     span {
       margin-bottom: 14px;
     }
 
   }
+
   .file-container {
     margin: 47px auto 0 auto;
     width: fit-content;
     display: flex;
+
     .file-loader {
       opacity: 0;
       position: absolute;
     }
+
     .file-loader-part1 {
       display: flex;
       width: 81px;
@@ -47,6 +54,7 @@
       color: rgba(0, 0, 0, 0.87);
       cursor: pointer;
     }
+
     .file-loader-part2 {
       display: flex;
       width: 295px;
@@ -63,10 +71,22 @@
       cursor: pointer;
     }
   }
+
   .submit {
     display: flex;
     justify-content: center;
-    margin: 50px 0 100px 0;
+    margin: 50px 0 20px 0;
+  }
+
+  .error {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 100px;
+
+    span {
+      color: red;
+      font-size: 16px;
+    }
   }
 }
 
@@ -85,4 +105,4 @@
       }
     }
   }
-}
+  }
